--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
-    "@nuxt/image-edge": "^1.0.0-28299296.4360928",
     "@nuxtjs/eslint-module": "^4.1.0",
     "@nuxtjs/tailwindcss": "^6.8.0",
     "eslint": "^8.48.0",
@@ -18,7 +17,7 @@
     "sass": "^1.67.0"
   },
   "dependencies": {
-    "@nuxt/image": "^1.0.0-rc.3",
+    "@nuxt/image": "^1.0.0",
     "eslint-plugin-vue": "^9.17.0",
     "gsap": "^3.12.2"
   }
